# ChineseChess

./: .gitignore  AboutAuthor.cpp  AboutAuthor.h  AboutAuthor.ui  CMakeLists.txt  CNAME  ChessBoard.cpp  ChessBoard.h  ChessBoard.ui  ChessBoard_pre.ui  ChessPieces.cpp  ChessPieces.h  ChessRuleProvider.cpp  ChessRuleProvider.fwd.h  ChessRuleProvider.h  ChessState.cpp  ChessState.fwd.h  ChessState.h  ChessStep.cpp  ChessStep.h  ChessVoice.cpp  ChessVoice.h  ChineseChess.pro  ChooseMainWindow.cpp  ChooseMainWindow.h  Config.cpp  Config.h  LICENSE  MachineGame.cpp  MachineGame.h  MonteCarloTree.h  NetworkGame.cpp  NetworkGame.h  Node.h  PKGBUILD  PuzzleData.cpp  PuzzleData.h  PuzzleGame.cpp  PuzzleGame.h  README.md  (+18 more)
.github/workflows/: Linux.yml  LinuxDeb.yml  MacOS.yml  Ubuntu_Deb.yml  mac.yml  macos.yml  main.yml  ubuntu.yml  windows.yml
ChineseChess/: AboutAuthor.h  ChineseChess.pro  NetworkGame.cpp  SelectGameMode.cpp  SelectGameMode.h
ChineseChess_05_05/ChineseChess/: AboutAuthor.cpp  AboutAuthor.ui  ChessPieces.cpp  ChessPieces.h  ChessRunIcon.rc  ChessStep.h  ChineseChess.pro  ChooseMainWindow.h  MachineGame.cpp  MachineGame.h  NetworkGame.h  chooseresource.qrc
ChineseChess_05_05/build-ChineseChess-Desktop_Qt_5_9_7_MinGW_32bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.ChineseChess.Debug  object_script.ChineseChess.Release  ui_AboutAuthor.h  ui_chessboard.h
ChineseChess_05_05/build-ChineseChess-Desktop_Qt_5_9_7_MinGW_32bit-Release/release/: moc_AboutAuthor.cpp  moc_ChessBoard.cpp  moc_ChessStep.cpp  moc_ChooseMainWindow.cpp  moc_NetworkGame.cpp  moc_SelectGameMode.cpp  qrc_chooseresource.cpp
ChineseChess_06_00/ChineseChess/: ChessBoard.cpp  ChessBoard.h  ChessStep.cpp  ChooseMainWindow.cpp  chessboard.ui  main.cpp
debian/: changelog  control  copyright
docs/: CONTRIBUTING.md  MCTS.md  SUPPORT.md  debug.txt
msix/: AppxBlockMap.xml  AppxManifest.xml
old versions/: README.md
resources/: res.qrc
resources/debian/: changelog  copyright
resources/debian_portable/: ChineseChess.sh  ldd.sh
resources/logo/: resources.rc
script/: cibuild
tech.xmuli.chinesechess/: linglong.yaml
